@@ -14,6 +14,10 @@ dependencies {
 
 version = siriusFrontendVersion
 
+enum DistJRE {
+    LIBERICA, JBR_JCEF, MICROSOFT, ZULU_JRE, ZULU_JDK, TEMURIN
+}
+
 ext {
     siriusJvmArgs = ['-Xms2G',
                      '-XX:MaxRAMPercentage=60',
@@ -21,7 +25,9 @@ ext {
 //                     '-XX:+UseG1GC',
 //                     '-XX:+UseZGC',
 //                     '-XX:+ZGenerational',
-                     '-XX:+ExitOnOutOfMemoryError']
+                     '-XX:+ExitOnOutOfMemoryError',
+                     '--add-opens=java.desktop/java.awt=ALL-UNNAMED' // needed to run jxbrowser properly
+    ]
     OS = DefaultNativePlatform.currentOperatingSystem
 
     if (siriusTargetPlatform.isLinux()) {
@@ -39,19 +45,49 @@ ext {
     }
 
     // configure infos for bundled JRE
-    jre_version = '21.0.7'
+    def distJre = siriusTargetPlatform.isWin() ? DistJRE.MICROSOFT : DistJRE.TEMURIN
+    jre_version = '21.0.8'
     jre_major = jre_version.split("[.]")[0]
 
-    // liberica config
-    jre_distributor_version = 'b1020.35'
-    jre_mac_prefix = null
-    jre_fname = "jbr_jcef-${jre_version}-${siriusTargetPlatform.jbrClassifier().get()}-${jre_distributor_version}.tar.gz"
-    jre_download_link = "https://cache-redirector.jetbrains.com/intellij-jbr/"
+    switch (distJre) {
+        case DistJRE.LIBERICA:
+            jre_distributor_version = "$jre_version+9"
+            jre_mac_prefix = null
+            jre_fname = "bellsoft-jre${jre_distributor_version}-${siriusTargetPlatform.bellsoftClassifier().get()}.${siriusTargetPlatform.isWin() ? "zip" : "tar.gz"}"
+            jre_download_base_link = "https://download.bell-sw.com/java/${jre_distributor_version}/"
+            break
+        case DistJRE.JBR_JCEF:
+            jre_distributor_version = 'b1020.35'
+            jre_mac_prefix = "Contents/Home"
+            jre_fname = "jbr_jcef-${jre_version}-${siriusTargetPlatform.jbrClassifier().get()}-${jre_distributor_version}.tar.gz"
+            jre_download_base_link = "https://cache-redirector.jetbrains.com/intellij-jbr/"
+            break
+        case DistJRE.ZULU_JRE:
+            jre_distributor_version = '21.44.17'
+            jre_mac_prefix = "zulu-${jre_major}.jre/Contents/Home"
+            jre_fname = "zulu${jre_distributor_version}-ca-jre${jre_version}-${siriusTargetPlatform.zuluClassifier().get()}.${siriusTargetPlatform.isWin() ? "zip" : "tar.gz"}"
+            jre_download_base_link = "https://cdn.azul.com/zulu/bin/"
+            break
+        case DistJRE.TEMURIN:
+            //https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.8%2B9/OpenJDK21U-jre_x64_mac_hotspot_21.0.8_9.tar.gz
+            jre_mac_prefix = "Contents/Home"
+            jre_distributor_version = "9"
+            jre_fname = "jdk-${jre_version}%2B9/OpenJDK21U-jre_${siriusTargetPlatform.adoptClassifier().get()}_hotspot_${jre_version}_${jre_distributor_version}.${siriusTargetPlatform.isWin() ? "zip" : "tar.gz"}"
+            jre_download_base_link = "https://github.com/adoptium/temurin21-binaries/releases/download/"
+            break;
+        case DistJRE.MICROSOFT:
+            //https://aka.ms/download-jdk/microsoft-jdk-21.0.8-windows-aarch64.zip
+            jre_mac_prefix = null
+            jre_fname = "microsoft-jdk-${jre_version}-${siriusTargetPlatform.msClassifier().get()}.${siriusTargetPlatform.isWin() ? "zip" : "tar.gz"}"
+            jre_download_base_link = "https://aka.ms/download-jdk/"
+            break;
+    }
+    jre_download_link = "${jre_download_base_link}${jre_fname}"
 }
 
 tasks.register('downloadRuntimeImage', Download) {
     group = "runtime"
-    src "${jre_download_link}${jre_fname}"
+    src jre_download_link
     dest getBuildDir().toPath().resolve('runtime').resolve("$jre_fname").toFile()
     onlyIfModified true
     overwrite false
@@ -60,7 +96,7 @@ tasks.register('downloadRuntimeImage', Download) {
 tasks.register('extractRuntimeImage', ExtractRuntime) {
     dependsOn downloadRuntimeImage
     inputArchive = downloadRuntimeImage.dest
-    outputDir = file(downloadRuntimeImage.dest.absolutePath.replace('.zip', '').replace('.tar.gz', ''))
+    outputDir = file(downloadRuntimeImage.dest.absolutePath.substring(0, downloadRuntimeImage.dest.absolutePath.lastIndexOf(".")))
 }
 
 subprojects {
@@ -513,14 +549,8 @@ subprojects {
 
                 if (appleId != null && appleIdPw != null && !appleId.isBlank() && !appleIdPw.isBlank()) {
                     def pkg = distInstaller.getOutputFile().getAbsolutePath()
-                    getLogger().lifecycle("Showing available providers")
-                    project.exec {
-                        commandLine(["xcrun", "altool", "--list-providers",
-                                     "-u", "$appleId",
-                                     "-p", "$appleIdPw"])
-                    }
 
-                    getLogger().lifecycle("Notarizing $pkg...")
+                    getLogger().lifecycle("Notarizing $pkg with notarytool...")
 
                     String uuid = null
                     def so = new ByteArrayOutputStream()
@@ -530,14 +560,19 @@ subprojects {
                                      "--password", "${appleIdPw}", "${pkg}"])
                         standardOutput so
                         errorOutput eo
+                        ignoreExitValue = true // Handle exit value manually below
                     }
-                    uuid = (so.toString().split(System.lineSeparator()) as List).stream().filter({ s -> s.contains("id: ") }).findFirst() map({ s -> s.split(":")[1].strip() }).orElseThrow()
-                    getLogger().lifecycle("Submitted Notarization Job with RequestUUID: $uuid")
 
-                    int returnCode = execResult.getExitValue()
-                    if (returnCode != 0) {
-                        throw new GradleException("Error ${returnCode} during notarization.")
+                    // Keep the rest of your logic for checking results, logging, and stapling
+                    uuid = (so.toString().split(System.lineSeparator()) as List).stream().filter({ s -> s.contains("id: ") }).findFirst() map({ s -> s.split(":")[1].strip() }).orElse(null)
+
+                    if (execResult.getExitValue() != 0 || uuid == null) {
+                        getLogger().error("Notarization submission failed.")
+                        getLogger().error("STDOUT: " + so.toString())
+                        getLogger().error("STDERR: " + eo.toString())
+                        throw new GradleException("Error ${execResult.getExitValue()} during notarization submission.")
                     }
+
 
                     getLogger().lifecycle("Requesting Log of $uuid...")
                     execResult = exec {
@@ -545,9 +580,11 @@ subprojects {
                                      "--password", "${appleIdPw}", "$uuid"])
                     }
 
-                    returnCode = execResult.getExitValue()
-                    if (returnCode != 0) {
-                        throw new GradleException("Error ${returnCode} during notarization log request.")
+                    if (execResult.getExitValue() != 0 || uuid == null) {
+                        getLogger().error("Error ${execResult.getExitValue()} during notarization log request.")
+                        getLogger().error("STDOUT: " + so.toString())
+                        getLogger().error("STDERR: " + eo.toString())
+                        throw new GradleException("Error ${execResult.getExitValue()} during notarization log request.")
                     }
 
 
@@ -555,9 +592,12 @@ subprojects {
                     execResult = exec {
                         commandLine(["xcrun", "stapler", "staple", "${pkg}"])
                     }
-                    returnCode = execResult.getExitValue()
-                    if (returnCode != 0) {
-                        throw new GradleException("Error ${returnCode} during stapling.")
+
+                    if (execResult.getExitValue() != 0 || uuid == null) {
+                        getLogger().error("Error ${execResult.getExitValue()} during stapling.")
+                        getLogger().error("STDOUT: " + so.toString())
+                        getLogger().error("STDERR: " + eo.toString())
+                        throw new GradleException("Error ${execResult.getExitValue()} during stapling.")
                     }
                 } else {
                     getLogger().warn("Could not find apple id for notarization. Skipping notarization step")
@@ -599,15 +639,11 @@ abstract class ExtractRuntime extends DefaultTask {
         Files.createDirectories(outputDir.toPath())
         project.copy {
             includeEmptyDirs = false
-            if (project.siriusTargetPlatform.isWin()) {
-                from(project.tarTree(inputArchive)) {
-                    eachFile { FileCopyDetails fcd ->
-                        fcd.relativePath = new RelativePath(true, fcd.relativePath.segments.drop(1))
-                    }
-                }
-                into outputDir
-            } else if (project.siriusTargetPlatform.isLinux() || (project.siriusTargetPlatform.isMac() && project.jre_mac_prefix == null)) {
-                from(project.tarTree(inputArchive)) {
+            if (project.siriusTargetPlatform.isWin() || project.siriusTargetPlatform.isLinux() || (project.siriusTargetPlatform.isMac() && project.jre_mac_prefix == null)) {
+                from(inputArchive.toString().endsWith('.zip')
+                        ? project.zipTree(inputArchive)
+                        : project.tarTree(inputArchive)
+                ) {
                     eachFile { FileCopyDetails fcd ->
                         fcd.relativePath = new RelativePath(true, fcd.relativePath.segments.drop(1))
                     }
